<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/id"
        android:layout_width="292dp"
        android:layout_height="45dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_pattern"
        android:backgroundTint="#D9D9D9"
        android:ems="10"
        android:fontFamily="@font/app_font"
        android:hint="@string/id_hint"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/pw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/pw"
        android:layout_width="293dp"
        android:layout_height="43dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/button_pattern"
        android:backgroundTint="#D9D9D9"
        android:ems="10"
        android:fontFamily="@font/app_font"
        android:hint="@string/pw_hint"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cb_save"
        app:layout_constraintEnd_toEndOf="@+id/id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/id"
        app:layout_constraintTop_toBottomOf="@+id/id"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="49dp"
        android:fontFamily="@font/app_font"
        android:text="@string/find_text"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/joinbtn"
        app:layout_constraintEnd_toEndOf="@+id/pw"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/pw"
        app:layout_constraintTop_toBottomOf="@+id/pw" />

    <android.widget.Button
        android:id="@+id/joinbtn"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/btnline3"
        android:fontFamily="@font/app_font"
        android:text="@string/joinbtn_text"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/loginbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toEndOf="@+id/loginbtn"
        app:layout_constraintTop_toBottomOf="@+id/find"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TouchTargetSizeCheck" />

    <android.widget.Button
        android:id="@+id/loginbtn"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/btnline3"
        android:fontFamily="@font/app_font"
        android:text="@string/loginbtn_text"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/joinbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find"
        app:layout_constraintVertical_bias="0.291"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/cb_save"
        android:layout_width="157dp"
        android:layout_height="23dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="197dp"
        android:layout_marginBottom="19dp"
        android:fontFamily="@font/app_font"
        android:text="@string/cb_save_text"
        app:layout_constraintBottom_toTopOf="@+id/find"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/pw"
        app:layout_constraintTop_toBottomOf="@+id/pw"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="394dp"
        android:layout_height="269dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082"
        app:srcCompat="@drawable/logo" />


</androidx.constraintlayout.widget.ConstraintLayout>